--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "node-tdd",
   "version": "1.0.0",
   "description": "Empty node project ready for any TDD",
-  "main": "index.js",
+  "main": "index.coffee",
   "scripts": {
-    "test": "mocha",
-    "dev": "mocha -w"
+    "test": "mocha --compilers coffee:coffee-script/register",
+    "dev": "mocha --compilers coffee:coffee-script/register -w"
   },
   "keywords": [
     "tdd"
   ],
-  "repository":{
+  "repository": {
     "type": "git",
     "url": "https://github.com/ArnaudRinquin/node-tdd"
   },
@@ -18,6 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^1.10.0",
+    "coffee-script": "^1.9.0",
     "mocha": "^2.1.0"
   }
 }
